refactor, csv processing endpoints, add tests